--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,8 @@ nix = {version="0.27.1", features=["term","user", "fs", "env", "process", "mount
 futures_codec = "0.4.1"
 itoa = "1.0.9"
 hyper-staticfile = "0.9.5"
+pam = "0.7.0"
+passwd-rs = "0.2.0"
+pwhash = "1.0.0"
+cookie = "0.18.0"
+rand = {version="0.8.5", features=["std","std_rng"]}
